--- a/curriculum/WebContent/curri.html
+++ b/curriculum/WebContent/curri.html
@@ -7,21 +7,21 @@
 </head>
 <body>
 <h1>CURRICULUM VITAE DE SERGIO PUCHADES SORLOZANO</h1>
-<h2 class="fondo"> <u class="subrayado"> Datos Personales</u></h2>
+<h2 class="fondo"> <span class="subrayado"> Datos Personales</span></h2>
 <p class="fondo2">
 <strong>Nombre y Apellidos:</strong> Sergio Puchades Sorlozano<br>
-<strong>Dirección:</strong> C./ Trafalgar, nº 6, p.9 46011 Valencia<br>
+<strong>DirecciÃ³n:</strong> C./ Trafalgar, nÂº 6, p.9 46011 Valencia<br>
 <strong>D.N.I.:</strong>25,658,349-S<br>
 </p>
-<h2 class="fondo"><u class="subrayado">Educación y Formación</u></h2>
-<p class="fondo2"><strong>2021-2023:</strong> Ciclo Formativo de Grado Superior Administrativo de Sistemas Informáticos en Red. <em>Instituto de Enseñanza Secundaria IES el Grao</em> (Valencia).
-<h2 class="fondo"><u class="subrayado">Capacidades y Aptitudes Personales</u></h2>
+<h2 class="fondo"><span class="subrayado">EducaciÃ³n y FormaciÃ³n</span></h2>
+<p class="fondo2"><strong>2021-2023:</strong> Ciclo Formativo de Grado Superior Administrativo de Sistemas InformÃ¡ticos en Red. <em>Instituto de EnseÃ±anza Secundaria IES el Grao</em> (Valencia).
+<h2 class="fondo"><span class="subrayado">Capacidades y Aptitudes Personales</span></h2>
 <h3>Idiomas</h3>
-<p class=fondo2><strong>Inglés:</strong> nivel básico, Tí­tulo nivel A2, por la <em>Escuela Oficial de Idiomas de Valencia</em>.
+<p class=fondo2><strong>InglÃ©s:</strong> nivel bÃ¡sico, TÃ­Â­tulo nivel A2, por la <em>Escuela Oficial de Idiomas de Valencia</em>.
 <hr>
 <address >
 Autor: Sergio Puchades Sorlozano<br>
-Última modificación de esta página: <br>
+Ãšltima modificaciÃ³n de esta pÃ¡gina: <br>
 </address>
 
 </body>
